# kernel-backend-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  openapi.json  pyproject.toml
.github/workflows/: publish.yml
alembic/versions/: a1b2c3d4e5f6_add_embedding_params.py  a636765bb0f0_phases_2_through_5_schema.py  f0a1b2c3d4e5_fix_identities_author_id_length.py
scripts/: check_boundaries.py  export_schema.py  gen_fixtures.py  listening_test.py  scaffold.sh  setup_polygon_audio.py
scripts/hooks/: guard_immutable.sh  run_module_tests.sh
src/kernel_backend/: config.py
src/kernel_backend/api/: dependencies.py
src/kernel_backend/api/auth/: router.py
src/kernel_backend/api/content/: router.py
src/kernel_backend/api/downloads/: router.py
src/kernel_backend/api/identity/: router.py  schemas.py
src/kernel_backend/api/invitations/: router.py
src/kernel_backend/api/middleware/: auth.py
src/kernel_backend/api/organizations/: router.py  schemas.py
src/kernel_backend/api/public/: router.py
src/kernel_backend/api/signing/: router.py  schemas.py
src/kernel_backend/api/users/: router.py
src/kernel_backend/api/verification/: router.py  schemas.py
tests/fixtures/: audio_signals.py  conftest.py
tests/fixtures/polygon/: conftest.py  registry.py
tests/helpers/: fakes.py  signing_defaults.py
tests/integration/: test_auth_e2e.py  test_org_isolation.py  test_process_pool_signing.py  test_sign_verify_audio_only.py  test_sign_verify_av.py  test_sign_verify_video_only.py  test_tampered_file_red.py  test_wid_recovery_compressed.py  test_wid_recovery_trimmed.py
tests/polygon/: test_fingerprint_polygon.py  test_video_polygon.py
tests/unit/: test_audio_pilot.py  test_auth_refresh.py  test_content_endpoint.py  test_dsp_manifest.py  test_fingerprint_audio.py  test_get_me.py  test_identity_endpoint.py  test_media_port_extensions.py  test_perceptual_shaping.py  test_pipeline_sign_verify.py  test_psychoacoustic.py  test_security_enforcement.py  test_sign_av_smoke.py  test_verdict_logic.py  test_verify_av_service.py  test_video_repository.py
(+33 files in other folders)
