[project]
name = "kernel-backend"
version = "2.0.0"
description = "Forensic digital watermarking and cryptographic signing for multimedia"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "rfc8785",
    "reedsolo==1.7.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "PyWavelets>=1.6",
    "opencv-python-headless>=4.9",
    "soundfile>=0.12",
    "ffmpeg-python>=0.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "boto3>=1.34",
    "sentry-sdk[fastapi]>=2.0",
    "structlog>=24",
    "pydantic-settings>=2.13.1",
    "librosa>=0.11.0",
    "resend>=2.24.0",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "aiofiles>=24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src layout: hatchling finds the package under src/
[tool.hatch.build.targets.wheel]
packages = ["src/kernel_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["kernel_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not email'"
# src layout: tell pytest where the package lives
pythonpath = ["src"]
markers = [
    "integration: requires librosa or live database",
    "polygon: requires data/ clips from polygon setup",
    "battery: full degradation matrix, run before release only",
    "slow: test takes more than 5 seconds",
    "boundary: import boundary enforcement tests",
    "email: sends real emails via Resend API — run manually only",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
